tests/baselines/reference/tsxStatelessFunctionComponentWithDefaultTypeParameter2.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
file.tsx(15,24): error TS2322: Type 'number' is not assignable to type 'string'.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== file.tsx (1 errors) ====
    /// <reference path="/.lib/react.d.ts" />
    
    import React = require('react')
    
    interface MyComponentProp {
        values: string;
    }
    
    function MyComponent1<T extends MyComponentProp>(attr: T) {
        return <div>attr.values</div>
    }
    
    
    // Error
    let i1 = <MyComponent1 values={5}/>;
                           ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 file.tsx:6:5: The expected type comes from property 'values' which is declared here on type 'IntrinsicAttributes & MyComponentProp'